Wed Mar 12 17:01:07 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/calc.h: Implement NonzeroColumns and
	  NonzeroElements to return indices of nonzero columns in a matrix
	  and elements in a vector

	* src/matrixw.[ch]: the _vindex function could have returned NULL,
	  though it didn't seem to cause any crashes

	* src/geniustests.txt: test the above

	* help/C/genius.xml: document the above

Mon Nov 18 17:53:27 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/combinatorics/factorial.gel: Fix applying "Triangular" over
	  matrices

Fri Oct 25 08:35:40 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: improve logic for jump detection (still not
	  perfect)

Thu Oct 24 23:51:15 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: better detection of jumps due to vertical
	  asymptotes to avoid drawing the vertical lines

Sun Oct 20 23:44:25 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/newton.gel: Add HalleysMethod

	* src/geniustests.txt: do testing

	* help/C/genius.xml: Document Halleys method

Wed Oct 16 08:11:49 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/lambert.gel: slight improvement in speed.

Wed Oct 16 00:33:17 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/symbolic.c: add some derivatives for Bessel functions and
	  for the Lambert W functions
	
	* help/C/genius.xml: document LambertW, LambertWm1, NewtonsMethod,
	  and some other minor improvements

	* lib/equation_solving/newton.gel, lib/functions/elementary.gel:
	  improve help string for the Newton's method functions

	* pixmaps/Makefile.am: pass -t to gtk-update-icon-cache to avoid
	  failing if no theme index file

Tue Oct 15 18:17:58 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/lambert.gel, lib/equation_solving/newton.gel: Add
	  LambertW, LambertWm1, NewtonsMethod
	
	* src/geniustests.txt: add tests for the above

Tue Oct 08 17:28:57 2013  Jiri (George) Lebl <jirka@5z.com>
