@@ -14,3 +14,21 @@ function ComposePower(f,n,x) = (
 		x = f call (x);
 	x
 )
+
+SetHelp("PrintTable","basic","Print a table of values for f(n) for numbers from from vector v, or if v is a number for integers from 1 to v")
+function PrintTable(f,v) = (
+	local *;
+	# Note we can't check the 2 arguments, FIXME
+	if not IsFunction(f) then
+		(error("PrintTable: f must be a function of one argument");bailout);
+
+	if IsVector(v) then (
+		for k in v do
+			print("" + k + "\t" + (f call (k)))
+	) else if IsPositiveInteger(v) then (
+		for k=1 to v do
+			print("" + k + "\t" + (f call (k)))
+	) else (
+		(error("PrintTable: v must be a vector or a positive integer");bailout)
+	)
+)
