@@ -1,7 +1,8 @@
 Changes to 1.0.18
 
 * New functions: KroneckerProduct (alias TensorProduct), NewtonsMethod,
-  HalleysMethod, LambertW, LambertWm1, NonzeroColumns, NonzeroElements
+  HalleysMethod, LambertW, LambertWm1, NonzeroColumns, NonzeroElements,
+  DisplayVariables, PrintTable
 * New PlotCanvasFreeze/PlotCanvasThaw functions to improve flicker
   if doing animations with genius.
 * Allow setting color in LinePlotDrawLine with RGB vector.
