@@ -1,3 +1,14 @@
+Mon Mar 17 22:31:01 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/calc.[ch], src/funclib.c: Implement DisplayVariables which
+	  shows either individual variables or a complete listing including
+	  stacktrace if called inside another function.
+
+	* lib/misc/misc.gel: Add PrintTable which prints a table of a
+	  function
+	
+	* help/C/genius.xml: Document the above
+
 Wed Mar 12 17:01:07 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c, src/calc.h: Implement NonzeroColumns and
